transformation en ajax pour rendre tout dynamique sans bug

--- a/inscription.html
+++ b/inscription.html
@@ -70,7 +70,7 @@
 
             </form>
 			<div class="form-group">
-                    <a name="inscription" value="inscription" class="btn btn-outline-danger float-right login_btn" href = "index.html">Retour</a>
+                    <a name="inscription" value="inscription" class="btn btn-outline-danger float-right login_btn" href = "index.php">Retour</a>
                 </div>
         </div>
     </div>
